<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register.Register8Activity">


    <TextView
        android:id="@+id/vib_connection2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="7dp"
        android:text="@string/conectvibra5"
        android:textColor="@color/gray_letter"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.293" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="412dp"
        android:layout_height="35dp"
        android:background="#304463"
        android:backgroundTint="@color/blue1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/inst_connection"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/conectvibra"
        android:textAlignment="center"
        android:textColor="@color/blue2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/vib_connection"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="7dp"
        android:text="@string/instruvibra"
        android:textColor="@color/gray_letter"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintVertical_bias="0.177" />

    <Button
        android:id="@+id/btnNext8"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/blue1"
        android:text="Próximo"
        android:textColor="@color/white"
        android:textColorHighlight="#4D6A96"
        android:textColorHint="#3F51B5"
        android:textColorLink="#4D6A96"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectvibra2"
        android:textColor="@color/gray_letter"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/conectvibra1"
        android:textColor="@color/gray_letter"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/intensidade1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:textColor="@color/black"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <NumberPicker
        android:id="@+id/pulso1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.638" />

    <NumberPicker
        android:id="@+id/tempo1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:theme="@style/AppTheme.Picker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/buttontestvibra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Iniciar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <TextView
        android:id="@+id/nomeusuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectvibra4"
        android:textColor="@color/gray_letter"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />


</androidx.constraintlayout.widget.ConstraintLayout>

