<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register.Register7Activity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView1"
        android:layout_width="412dp"
        android:layout_height="35dp"
        android:background="#304463"
        android:backgroundTint="@color/blue1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/inst_connection"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/conect2"
        android:textAlignment="center"
        android:textColor="@color/blue2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentContainerView1"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/conectinsole4"
        android:textColor="@color/gray_letter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/conectinsole"
        android:textColor="@color/gray_letter"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.291" />

    <ImageView
        android:id="@+id/imageinstructionsinsole"
        android:layout_width="390dp"
        android:layout_height="174dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657"
        tools:srcCompat="@drawable/positioninsole" />

    <Button
        android:id="@+id/buttontestinsole1"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="Iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />


</androidx.constraintlayout.widget.ConstraintLayout>